# Power-Query-M-Compiler

./: Cargo.toml  INTERFACE_GUIDE.md  PROJECT_REPORT.md  SOURCE_OF_TRUTH.md  _t07_debug.rs  new_resolver.rs  new_run_step.rs  new_sql.rs  new_typechecker.rs  test_gen.tmp  your_formula.pq
crates/pq_ast/: Cargo.toml
crates/pq_ast/src/: call_arg.rs  expr.rs  lib.rs  program.rs  step.rs
crates/pq_diagnostics/: Cargo.toml
crates/pq_diagnostics/src/: diagnostic.rs  lib.rs  reporter.rs  span.rs
crates/pq_engine/: Cargo.toml
crates/pq_engine/src/: engine.rs  lib.rs
crates/pq_executor/: Cargo.toml
crates/pq_executor/src/: executor.rs  lib.rs  value.rs
crates/pq_formatter/: Cargo.toml
crates/pq_formatter/src/: formatter.rs  lib.rs
crates/pq_grammar/: Cargo.toml
crates/pq_grammar/examples/: dump_catalogue.rs
crates/pq_grammar/src/: functions.rs  keywords.rs  lib.rs  operators.rs  types.rs
crates/pq_lexer/: Cargo.toml
crates/pq_lexer/src/: lexer.rs  lib.rs  token.rs
crates/pq_parser/: Cargo.toml
crates/pq_parser/src/: error.rs  lib.rs  parser.rs
crates/pq_pipeline/: Cargo.toml
crates/pq_pipeline/src/: lib.rs  pipeline.rs  table.rs
crates/pq_resolver/: Cargo.toml
crates/pq_resolver/src/: lib.rs  resolver.rs  schema.rs  scope.rs
crates/pq_sql/: Cargo.toml
crates/pq_sql/src/: generator.rs  lib.rs
crates/pq_typechecker/: Cargo.toml
crates/pq_typechecker/src/: checker.rs  error.rs  lib.rs
crates/pq_types/: Cargo.toml
crates/pq_types/src/: coercion.rs  column_type.rs  inference.rs  lib.rs
public/: index.html
specs/: 00_conventions.md  README.md  _catalogue_dump.tsv  _gen_catalogue.ps1  _gen_families.ps1  _gen_fixtures.ps1  _gen_unique_stubs.ps1  _sql_supported.txt
specs/conformance/: README.md
specs/conformance/cross_cutting/error_model/: ERR-001_lex_unterminated_string.json  ERR-002_parse_missing_in.json  ERR-003_unknown_step.json  ERR-004_unknown_column.json  ERR-005_div_zero_runtime.json
specs/conformance/cross_cutting/invariants/: INV-001_immutable_input.json
specs/cross_cutting/: 01_lexical_grammar.md  02_syntactic_grammar.md  03_type_system.md  04_value_model.md  05_row_context_and_each.md  06_null_propagation.md  07_numeric_semantics.md  08_text_semantics.md  09_date_time_semantics.md  10_table_semantics.md  11_list_semantics.md  12_record_semantics.md  13_error_model.md  14_sql_lowering_principles.md  15_invariants.md  16_function_catalogue.md  17_sql_lowering_templates.md
specs/families/: F01_pure_scalar_unary.md  F02_binary_text_predicate.md  F03_list_unary_aggregate.md  F04_list_set_operation.md  F05_list_higher_order.md  F06_table_row_trim.md  F07_table_row_filter.md  F08_table_column_shape.md  F09_table_column_content.md  F10_table_aggregation.md  F11_workbook_entry.md  F12_list_construction.md  README.md
specs/functions/: README.md
specs/functions/list/: List.Difference.md  List.Distinct.md  List.FirstN.md  List.Intersect.md  List.LastN.md  List.MatchesAll.md  List.MatchesAny.md  List.Range.md  List.RemoveFirstN.md  List.RemoveItems.md  List.RemoveLastN.md  List.RemoveMatchingItems.md  List.RemoveNulls.md  List.Reverse.md  List.Select.md  List.Skip.md  List.Transform.md  List.Union.md
specs/functions/table/: Table.AddColumn.md  Table.AddIndexColumn.md  Table.Column.md  Table.ColumnNames.md  Table.CombineColumns.md  Table.Distinct.md  Table.DuplicateColumn.md  Table.FillDown.md  Table.FillUp.md  Table.FirstValue.md  Table.MatchesAllRows.md  Table.MatchesAnyRows.md  Table.RemoveRowsWithErrors.md  Table.ReplaceValue.md  Table.RowCount.md  Table.SelectRows.md  Table.SelectRowsWithErrors.md  Table.SplitColumn.md  Table.TransformColumnTypes.md  Table.TransformColumns.md
specs/functions/unique/: Excel.Workbook.md  List.Accumulate.md  List.Alternate.md  List.Buffer.md  List.Covariance.md  List.FindText.md  List.InsertRange.md  List.MaxN.md  List.MinN.md  List.Percentile.md  List.Positions.md  List.RemoveRange.md  List.ReplaceMatchingItems.md  List.ReplaceRange.md  List.ReplaceValue.md  List.Sort.md  List.Split.md  List.TransformMany.md  List.Zip.md  Logical.And.md  Logical.Or.md  Logical.Xor.md  Number.Mod.md  Number.Power.md  Table.AddFuzzyClusterColumn.md  Table.AddJoinColumn.md  Table.AddKey.md  Table.AddRankColumn.md  Table.AggregateTableColumn.md  Table.Buffer.md  Table.Combine.md  Table.CombineColumnsToRecord.md  Table.ConformToPageReader.md  Table.Contains.md  Table.ContainsAll.md  Table.ContainsAny.md  Table.ExpandListColumn.md  Table.ExpandRecordColumn.md  Table.ExpandTableColumn.md  Table.FromColumns.md  (+53 more)
specs/interfaces/: cli.md  http_api.md  playground.md
specs/operators/: arithmetic.md  comparison.md  concatenation.md  logical.md  unary.md
specs/pipeline/: 01_workbook_ingestion.md  02_lexing.md  03_parsing.md  04_resolution.md  05_type_checking.md  06_formatting.md  07_execution.md  08_sql_emission.md  09_packaging.md
src/: api.rs  lib.rs  main.rs
tests/: conformance_runner.rs  list_contains_tests.rs  list_difference_tests.rs  list_intersect_tests.rs  list_transform_tests.rs  table_columnnames_tests.rs  table_expandtablecolumn_tests.rs  table_firstn_tests.rs  table_group_tests.rs  table_lastn_tests.rs  table_range_tests.rs  table_rowcount_tests.rs  table_selectrows_tests.rs  text_contains_tests.rs  text_endswith_tests.rs  text_startswith_tests.rs
(+57 files in other folders)
