[workspace]
members = [
    "crates/pq_grammar",
    "crates/pq_types",
    "crates/pq_diagnostics",
    "crates/pq_lexer",
    "crates/pq_ast",
    "crates/pq_parser",
    "crates/pq_pipeline",
    "crates/pq_resolver",
    "crates/pq_typechecker",
    "crates/pq_formatter",
    "crates/pq_executor",
    "crates/pq_sql",
    "crates/pq_engine",
]
resolver = "2"

[package]
name = "M_Engine"
version = "0.1.0"
edition = "2021"
default-run = "M_Engine" 

[lib]
name = "m_engine"
path = "src/lib.rs"

[dependencies]
pq_engine      = { path = "crates/pq_engine"      }
pq_formatter   = { path = "crates/pq_formatter"   }
pq_diagnostics = { path = "crates/pq_diagnostics" }

# Web server
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
pq_pipeline   = { path = "crates/pq_pipeline" }
pq_types      = { path = "crates/pq_types" }
walkdir       = "2"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"

# ──────────────────────────────────────────────────────────────────────────
# Release profile — optimised for minimum binary size.
# Build with:  cargo build --release
# Expect: significantly slower release builds, much smaller .exe files.
# ──────────────────────────────────────────────────────────────────────────
[profile.release]
opt-level = "z"        # Optimise for size (use "s" for a milder size/speed trade-off)
lto = true             # Link-time optimisation across all 13 crates
codegen-units = 1      # One codegen unit → maximum cross-module inlining/dead-code removal
panic = "abort"        # Drop unwinding tables (smaller, but panics terminate the process)
strip = true           # Strip debug symbols from the final binary
