[package]
name = "pq_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
pq_grammar     = { path = "../pq_grammar"     }
pq_lexer       = { path = "../pq_lexer"       }
pq_ast         = { path = "../pq_ast"         }
pq_types       = { path = "../pq_types"       }
pq_diagnostics = { path = "../pq_diagnostics" }