[package]
name = "pq_resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
pq_ast         = { path = "../pq_ast"         }
pq_pipeline    = { path = "../pq_pipeline"    }
pq_diagnostics = { path = "../pq_diagnostics" }

[dev-dependencies]
pq_lexer   = { path = "../pq_lexer"   }
pq_parser  = { path = "../pq_parser"  }
